# learn-haskell

./: .gitignore  README.md
TryHaskell.hsproj/: .uuid  HS02StartingOut.hs  HS03TypeAndTypeClasses.hs  HS04SyntaxInFunctions.hs  Main.hs  TryHaskell.cabal  _HS02StartingOut.hsplay  _HS03TypeAndTypeClasses.hsplay  _HS04SyntaxInFunctions.hsplay  secret
TryHaskell.hsproj/BasicOfHaskell/: C1.hs  C2.hs  C3.hs  _C1.hsplay  _C2.hsplay  _C3.hsplay
TryHaskell.hsproj/BasicTypeLevel/: Main.hs  _Main.hsplay
TryHaskell.hsproj/Concepts/: EffectfulIO.hi  EffectfulIO.hs  List.hs  Monoids.hs  Pipe.hs  _EffectfulIO.hsplay  _List.hsplay  _Pipe.hsplay
TryHaskell.hsproj/DerekBanas/: HaskellTutorial.hs  _HaskellTutorial.hsplay
TryHaskell.hsproj/FunctorApplicativeMonad/: Main.hs  _Main.hsplay
TryHaskell.hsproj/GreatGood/: HS02StartingOut.hs  HS03TypeAndTypeClasses.hs  HS04SyntaxInFunctions.hs  _HS02StartingOut.hsplay
TryHaskell.hsproj/Snip/: AAA.hs  ActivePattern.hs  Applicative.hs  BangPattern.hs  BasicHaskell.hs  Data.hs  DiggingHaskell.hs  Fix.hs  Indent.hs  Map.hs  MonadMakeDifficult.hs  PatternMatching.hs  PatternSynonyms.hs  Pipe.hs  Read.hs  RecordViewPatterns.hs  RepeatPattern.hs  SafeFormat.hs  String.hs  TC.hs  TypeOperator.hs  _ActivePattern.hsplay  _Applicative.hsplay  _BangPattern.hsplay  _BasicHaskell.hsplay  _Data.hsplay  _Fix.hsplay  _Indent.hsplay  _Map.hsplay  _PatternMatching.hsplay  _PatternSynonyms.hsplay  _Pipe.hsplay  _Read.hsplay  _RecordViewPatterns.hsplay  _RepeatPattern.hsplay  _SafeFormat.hsplay  _TwoTwoFive.hsplay
TryHaskell.hsproj/SumProduct/: Main.hs
(+53 files in other folders)
