name: TryHaskell
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-6.29-1
x-last-ide-version: HfM1.4.0
Executable TryHaskell
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      safe -any,
      containers -any
  other-modules:
      BasicTypeLevel.Main
      BasicOfHaskell.C2
      BasicOfHaskell.C1
      BasicOfHaskell.C3
      DerekBanas.HaskellTutorial
      GreatGood.HS04SyntaxInFunctions
      GreatGood.HS01Introduction
      GreatGood.HS03TypeAndTypeClasses
      GreatGood.HS02StartingOut
      SumProduct.Main
      Concepts.List
      Concepts.EffectfulIO
      Concepts.Monoids
      Concepts.Pipe
      FunctorApplicativeMonad.Main
      WriteYour.C1
